// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionEdit renders 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "discussions.edit.doneButton",
        "title": "Done",
      },
      Object {
        "accessibilityLabel": "Edit attachment (none)",
        "action": [Function],
        "badge": null,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "discussions.edit.attachment-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Edit Discussion"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <UnmetRequirementBanner
      backgroundColor="#EE0612"
      testID="discussions.edit.unmet-requirement-banner"
      text="Invalid field"
      visible={false}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardDismissMode="on-drag"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Title
      </Heading1>
      <RowWithTextInput
        border="both"
        defaultValue="Cursed Hollow"
        identifier="discussions.edit.titleInput"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Add title (required)"
        title=""
      />
      <RequiredFieldSubscript
        testID="discussions.edit.title.validation-error"
        visible={false}
      />
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Description
      </Heading1>
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "borderTopColor": "#C7CDD1",
            "borderTopWidth": 0.5,
            "height": 200,
          }
        }
      >
        <RichTextEditor
          attachmentUploadPath="/courses/1/files"
          contentHeight={150}
          defaultValue="Gather tribute or face my curse."
          keyboardAware={false}
          navigator={
            Object {
              "dismiss": [Function],
              "dismissAllModals": [Function],
              "isModal": false,
              "pop": [Function],
              "show": [Function],
              "traitCollection": [Function],
            }
          }
          onFocus={[Function]}
          placeholder="Add description"
          scrollEnabled={true}
          showToolbar="always"
        />
      </View>
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Options
      </Heading1>
      <RowWithSwitch
        border="both"
        onValueChange={[Function]}
        testID="discussions.edit.published.switch"
        title="Publish"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.discussion_type.switch"
        onValueChange={[Function]}
        title="Allow threaded replies"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.subscribed.switch"
        onValueChange={[Function]}
        title="Subscribe"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        onValueChange={[Function]}
        title="Students must post before seeing replies"
        value={false}
      />
      <View>
        <Heading1
          style={
            Object {
              "color": "#2D3B45",
              "marginBottom": 8,
              "marginLeft": 16,
              "marginTop": 16,
            }
          }
        >
          Availability
        </Heading1>
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-delayed-post-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.delayed_post_at.row"
          title="Available From"
        />
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-lock-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.lock_at.row"
          title="Available Until"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`DiscussionEdit renders new form 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "discussions.edit.doneButton",
        "title": "Done",
      },
      Object {
        "accessibilityLabel": "Edit attachment (none)",
        "action": [Function],
        "badge": null,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "discussions.edit.attachment-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="New Discussion"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <UnmetRequirementBanner
      backgroundColor="#EE0612"
      testID="discussions.edit.unmet-requirement-banner"
      text="Invalid field"
      visible={false}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardDismissMode="on-drag"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Title
      </Heading1>
      <RowWithTextInput
        border="both"
        defaultValue={null}
        identifier="discussions.edit.titleInput"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Add title (required)"
        title=""
      />
      <RequiredFieldSubscript
        testID="discussions.edit.title.validation-error"
        visible={false}
      />
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Description
      </Heading1>
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "borderTopColor": "#C7CDD1",
            "borderTopWidth": 0.5,
            "height": 200,
          }
        }
      >
        <RichTextEditor
          attachmentUploadPath="/courses/1/files"
          contentHeight={150}
          defaultValue={null}
          keyboardAware={false}
          navigator={
            Object {
              "dismiss": [Function],
              "dismissAllModals": [Function],
              "isModal": false,
              "pop": [Function],
              "show": [Function],
              "traitCollection": [Function],
            }
          }
          onFocus={[Function]}
          placeholder="Add description"
          scrollEnabled={true}
          showToolbar="always"
        />
      </View>
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Options
      </Heading1>
      <RowWithSwitch
        border="both"
        onValueChange={[Function]}
        testID="discussions.edit.published.switch"
        title="Publish"
        value={null}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.discussion_type.switch"
        onValueChange={[Function]}
        title="Allow threaded replies"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        onValueChange={[Function]}
        title="Students must post before seeing replies"
        value={null}
      />
      <View>
        <Heading1
          style={
            Object {
              "color": "#2D3B45",
              "marginBottom": 8,
              "marginLeft": 16,
              "marginTop": 16,
            }
          }
        >
          Availability
        </Heading1>
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-delayed-post-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.delayed_post_at.row"
          title="Available From"
        />
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-lock-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.lock_at.row"
          title="Available Until"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`DiscussionEdit updates from props 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "discussions.edit.doneButton",
        "title": "Done",
      },
      Object {
        "accessibilityLabel": "Edit attachment (none)",
        "action": [Function],
        "badge": null,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "discussions.edit.attachment-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Edit Discussion"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <UnmetRequirementBanner
      backgroundColor="#EE0612"
      testID="discussions.edit.unmet-requirement-banner"
      text="Invalid field"
      visible={false}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardDismissMode="on-drag"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Title
      </Heading1>
      <RowWithTextInput
        border="both"
        defaultValue="Cursed Hollow"
        identifier="discussions.edit.titleInput"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Add title (required)"
        title=""
      />
      <RequiredFieldSubscript
        testID="discussions.edit.title.validation-error"
        visible={false}
      />
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Description
      </Heading1>
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "borderTopColor": "#C7CDD1",
            "borderTopWidth": 0.5,
            "height": 200,
          }
        }
      >
        <RichTextEditor
          attachmentUploadPath="/courses/1/files"
          contentHeight={150}
          defaultValue="Gather tribute or face my curse."
          keyboardAware={false}
          navigator={
            Object {
              "dismiss": [Function],
              "dismissAllModals": [Function],
              "isModal": false,
              "pop": [Function],
              "show": [Function],
              "traitCollection": [Function],
            }
          }
          onFocus={[Function]}
          placeholder="Add description"
          scrollEnabled={true}
          showToolbar="always"
        />
      </View>
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Options
      </Heading1>
      <RowWithSwitch
        border="both"
        onValueChange={[Function]}
        testID="discussions.edit.published.switch"
        title="Publish"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.discussion_type.switch"
        onValueChange={[Function]}
        title="Allow threaded replies"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.subscribed.switch"
        onValueChange={[Function]}
        title="Subscribe"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        onValueChange={[Function]}
        title="Students must post before seeing replies"
        value={false}
      />
      <View>
        <Heading1
          style={
            Object {
              "color": "#2D3B45",
              "marginBottom": 8,
              "marginLeft": 16,
              "marginTop": 16,
            }
          }
        >
          Availability
        </Heading1>
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-delayed-post-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.delayed_post_at.row"
          title="Available From"
        />
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-lock-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.lock_at.row"
          title="Available Until"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`DiscussionEdit updates with new props 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "discussions.edit.doneButton",
        "title": "Done",
      },
      Object {
        "accessibilityLabel": "Edit attachment (none)",
        "action": [Function],
        "badge": null,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "discussions.edit.attachment-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Edit Discussion"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={true}
      width={170}
    />
    <UnmetRequirementBanner
      backgroundColor="#EE0612"
      testID="discussions.edit.unmet-requirement-banner"
      text="Invalid field"
      visible={false}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardDismissMode="on-drag"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Title
      </Heading1>
      <RowWithTextInput
        border="both"
        defaultValue="Cursed Hollow"
        identifier="discussions.edit.titleInput"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Add title (required)"
        title=""
      />
      <RequiredFieldSubscript
        testID="discussions.edit.title.validation-error"
        visible={false}
      />
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Description
      </Heading1>
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "borderTopColor": "#C7CDD1",
            "borderTopWidth": 0.5,
            "height": 200,
          }
        }
      >
        <RichTextEditor
          attachmentUploadPath="/courses/1/files"
          contentHeight={150}
          defaultValue="Gather tribute or face my curse."
          keyboardAware={false}
          navigator={
            Object {
              "dismiss": [Function],
              "dismissAllModals": [Function],
              "isModal": false,
              "pop": [Function],
              "show": [Function],
              "traitCollection": [Function],
            }
          }
          onFocus={[Function]}
          placeholder="Add description"
          scrollEnabled={true}
          showToolbar="always"
        />
      </View>
      <Heading1
        style={
          Object {
            "color": "#2D3B45",
            "marginBottom": 8,
            "marginLeft": 16,
            "marginTop": 16,
          }
        }
      >
        Options
      </Heading1>
      <RowWithSwitch
        border="both"
        onValueChange={[Function]}
        testID="discussions.edit.published.switch"
        title="Publish"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.discussion_type.switch"
        onValueChange={[Function]}
        title="Allow threaded replies"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        identifier="discussions.edit.subscribed.switch"
        onValueChange={[Function]}
        title="Subscribe"
        value={false}
      />
      <RowWithSwitch
        border="bottom"
        onValueChange={[Function]}
        title="Students must post before seeing replies"
        value={false}
      />
      <View>
        <Heading1
          style={
            Object {
              "color": "#2D3B45",
              "marginBottom": 8,
              "marginLeft": 16,
              "marginTop": 16,
            }
          }
        >
          Availability
        </Heading1>
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-delayed-post-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.delayed_post_at.row"
          title="Available From"
        />
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          removeButtonTestID="discussions.edit.clear-lock-at.button"
          selected={false}
          showRemoveButton={false}
          testID="discussions.edit.lock_at.row"
          title="Available Until"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;
